--- a/index.html
+++ b/index.html
@@ -675,7 +675,7 @@
           "></i>(+62) 123-321-543</p>
             </aside>
             <div class=" footer grid gap-8   lg:gap-4 grid-cols-2 grid-rows-1 ">
-                <div class=" footer grid  gap-3 col-span-2 lg:gap-4 grid-cols-3 grid-rows-1">
+                <div class=" footer grid  gap-3 col-span-2 lg:gap-4 grid-cols-2 grid-rows-1">
                     <nav>
                         <header class="footer-title">Company</header>
                         <a class="link link-hover">Leadership</a>
@@ -691,7 +691,7 @@
                         <a class="link link-hover">Contact Us</a>
                     </nav>
                 </div>
-                <div class="footer flex justify-center ml-6 lg:ml-1">
+                <div class="footer flex justify-center ml-[70px] lg:ml-1">
                     <nav>
                         <header class="footer-title">Services</header>
                         <a class="link link-hover">Academy</a>
